Fix: set brands-logos to 3 columns on mobile

--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -3549,3 +3549,10 @@
     transition: none !important;
   }
 }
+
+
+@media(max-width: 480px) {
+  .brands-logos {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
